2017-04-07  Bart Schaefer  <schaefer@zsh.org>

	* 40940: Src/cond.c: untokenize names of condition features
	before attempting to look up the definition from a module.
	Necessary because of 40760 (tokenization of '-' as Dash).

2017-04-05  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/22653: Doc/Zsh/options.yo: Clarify REMATCH_PCRE
	semantics.

2017-04-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40933: Src/exec.c: we need job text in sourced files in case
	of suspending.

2017-04-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 40932: Src/params.c, Test/D06subscript.ztst: parameter
	subscripts need to count parentheses to avoid terminating early.

2017-04-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 40929 (replaces 40598): Src/subst.c: paramsubst() should always
	return scalar when PREFORK_SINGLE was passed in from prefork()

2017-04-01  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 40782: Completion/Unix/Type/_hosts: avoid dependency
	on zsh/regex module

2017-03-30  Peter Stephenson  <p.stephenson@samsung.com>

	* Dag-Erling Smørgrav: 40915: Completion/BSD/Command/_kld: fix
	breakage.

	* Sebastian: 40909: Test/D04parameter.ztst: stress test for
	parameter substitution.

2017-03-27  Peter Stephenson  <p.stephenson@samsung.com>

	* 40906: Doc/Zsh/expn.yo: array subst needs [*] or [@] with
	KSH_ARRAYS.  Note this for (k) flag.

2017-03-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Alexandre Rames: 40878: Completion/Unix/Command/_stgit:
	additional squash command completion.

	* Aaron Schrab: 40892: Functions/Misc/run-help-ip: subcommand
	matching for ip help.

2017-03-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40891: Src/glob.c, Test/D04parameter.ztst: another similar fix
	for zero-length matches at the end of a string.

2017-03-23  Peter Stephenson  <p.stephenson@samsung.com>

	* users/22601: Src/glob.c, Test/D04parameter.ztst: problem matching
	pattern against zero-length string in parameter substitutions.
